src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Msft Process</fullName>
        <description>Microsoft process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>PO received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Onboarding Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Fully Onboarded</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Pipeline</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Upside</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Commit</fullName>
        </values>
        <values>
            <fullName>Debooked</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>PO received</fullName>
        </values>
        <values>
            <fullName>Pipeline</fullName>
        </values>
        <values>
            <fullName>Renewal</fullName>
        </values>
        <values>
            <fullName>Strong Upside</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Upside</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACE_Onsite__c</fullName>
        <label>ACE (Onsite)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACE_Public__c</fullName>
        <label>ACE (Public)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACE_Seats__c</fullName>
        <label>ACE Seats (#)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AE_Identified__c</fullName>
        <description>1 if identified by an AE, 0 if not</description>
        <formula>IF(
OR(
CONTAINS(Identified_By_Role_Static__c ,&quot;Account Executive&quot;), 
CONTAINS(Identified_By_Role_Static__c ,&quot;Sales Rep&quot;),
CONTAINS(Identified_By_Role_Static__c ,&quot;Enterprise Rep&quot;)
),
1,0)</formula>
        <label>AE-Identified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATAM_Duration__c</fullName>
        <label>ATAM Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATAM__c</fullName>
        <label>ATAM #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVP_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Velocity pipe approval process</description>
        <label>AVP Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVP_Closed_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVP Closed Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Close_Date__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;TEXT(MONTH(CloseDate))&amp;&quot;/&quot;&amp;TEXT(DAY(CloseDate))&amp;&quot;/&quot;&amp;TEXT(YEAR(CloseDate))&amp;&quot;)&quot;</formula>
        <label>Account (Close Date)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Enab_Owner__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp; Account.Customer_Experience_Owner3__r.Full_Name__c&amp;&quot;)&quot;</formula>
        <label>Account (CX Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Eval_Age__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;TEXT(Sales_Cycle_Days_Eval_Start__c)&amp;&quot; days)&quot;</formula>
        <label>Account (Eval Age)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_IDed_by_Team_Rep_Status__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;Identified_By__r.FirstName&amp;&quot; &quot;&amp;Identified_By__r.LastName&amp;&quot;, &quot;&amp;(Identified_By_Team_Static__c)&amp;&quot;,&quot;&amp;(Owner_Team_name__c)&amp;&quot;, &quot;&amp;TEXT(Stage_Duration2__c)&amp;&quot; days&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account (IDed by, Team, Rep, Status)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_IDed_by_Type_Sales_Cycle__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;Identified_By__r.FirstName&amp;&quot; &quot;&amp;Identified_By__r.LastName&amp;&quot;, &quot;&amp;TEXT(Type)&amp;&quot;, &quot;&amp; TEXT(Sales_Cycle_Days__c)&amp;&quot; day(s))&quot;</formula>
        <label>Account (IDed by, Type, Sales Cycle)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Lead_Source__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;TEXT(LeadSource)&amp;&quot;)&quot;</formula>
        <label>Account (Lead Source)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Stage_Eval_Age__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;TEXT(StageName)&amp;&quot;, &quot;&amp;TEXT(Sales_Cycle_Days_Eval_Start__c)&amp;&quot; days)&quot;</formula>
        <label>Account (Stage, Eval Age)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Stage__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;TEXT(StageName)&amp;&quot;)&quot;</formula>
        <label>Account (Stage)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>Account.Status__c</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Lead_Source__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;TEXT(Owner_Team__c)&amp;&quot;, &quot;&amp;TEXT(LeadSource)&amp;&quot;)&quot;</formula>
        <label>Account (Team, Lead Source)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Lost_Reason_Competitor__c</fullName>
        <formula>IF(TEXT(Primary_Competitor_2__c)=&quot;&quot;,Account.Name&amp;&quot; (&quot;&amp;TEXT(Owner_Team__c)&amp;&quot;, &quot;&amp;TEXT(Lost_Reason__c)&amp;&quot;, N/A)&quot;,
Account.Name&amp;&quot; (&quot;&amp;TEXT(Owner_Team__c)&amp;&quot;, &quot;&amp;TEXT(Lost_Reason__c)&amp;&quot;, &quot;&amp;TEXT(Primary_Competitor_2__c)&amp;&quot;)&quot;)</formula>
        <label>Account (Team, Lost Reason, Competitor)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Reason__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;TEXT(Owner_Team__c)&amp;&quot;, &quot;&amp;TEXT(Lost_Reason__c)&amp;&quot;)&quot;</formula>
        <label>Account (Team, Reason)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;TEXT(Owner_Team__c)&amp;&quot;)&quot;</formula>
        <label>Account (Team)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account.Name&amp;&quot; (&quot;&amp;TEXT(Type)&amp;&quot;)&quot;</formula>
        <label>Account (Type)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_and_Owner__c</fullName>
        <formula>Account_Name__c&amp;&quot; (&quot;&amp;Owner.Full_Name__c&amp;&quot;)&quot;</formula>
        <label>Account (Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_for_Issues_Risks__c</fullName>
        <inlineHelpText>What are the actions and who are the owners for dealing with the highest priority issues / risks to us closing the deal?</inlineHelpText>
        <label>Actions for Issues / Risks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Active_Identified_By__c</fullName>
        <formula>IF(Identified_By__r.IsActive=TRUE,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <label>Active (Identified By)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Open Sales Opportunities</relationshipLabel>
        <relationshipName>Open_Sales_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>Shared with WI Partner</description>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Cores_Purchased__c</fullName>
        <label>Actual Cores Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Purchase_Unit__c</fullName>
        <description>Designate the actual purchase unit for this opportunity. Meant for use with the &quot;Actual Sockets Purchased	&quot;,  &quot;Actual Cores Purchased&quot;, and &quot;Actual Workloads Purchased&quot; fields</description>
        <label>Actual Purchase Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Sockets_Purchased__c</fullName>
        <label>Actual Sockets Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_VMs_Purchased__c</fullName>
        <label>Actual Workloads Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advocates_and_Blockers_Last_Updated__c</fullName>
        <label>Advocates and Blockers Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Against_Dell_for_Comp_Win__c</fullName>
        <formula>IF(AND(TEXT(StageName)&lt;&gt;&quot;Closed Won&quot;,TEXT(StageName)&lt;&gt;&quot;Closed Lost&quot;),NULL, 
IF(OR(CONTAINS(LOWER(TEXT(Primary_Competitor_2__c)),&quot;dell&quot;),CONTAINS(LOWER(TEXT(Primary_Competitor_2__c)),&quot;vkernel&quot;),CONTAINS(LOWER(TEXT(Primary_Competitor_2__c)),&quot;vfoglight&quot;),CONTAINS(LOWER(TEXT(Primary_Competitor_2__c)),&quot;quest&quot;)),&quot;Dell&quot;, 
IF(TEXT(StageName)=&quot;Closed Won&quot;, 
IF(OR( 
INCLUDES(Secondary_Competitors__c,&quot;vKernel&quot;), 
INCLUDES(Secondary_Competitors__c,&quot;vFoglight&quot;), 
INCLUDES(Secondary_Competitors__c,&quot;Dell (Foglight vOps only)&quot;), 
INCLUDES(Secondary_Competitors__c,&quot;Dell (upgrade from vFog/vKer)&quot;),
INCLUDES(Secondary_Competitors__c,&quot;Quest&quot;)), 
&quot;Dell&quot;,NULL),NULL)))</formula>
        <label>Against Dell (for Comp Win)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Against_VMware_for_Comp_Win__c</fullName>
        <formula>IF(AND(TEXT(StageName)&lt;&gt;&quot;Closed Won&quot;,TEXT(StageName)&lt;&gt;&quot;Closed Lost&quot;),NULL,
IF(OR(CONTAINS(LOWER(TEXT(Primary_Competitor_2__c)),&quot;vmware&quot;),CONTAINS(LOWER(TEXT(Primary_Competitor_2__c)),&quot;vcops&quot;)),&quot;VMware&quot;,
IF(TEXT(StageName)=&quot;Closed Won&quot;,
IF(OR(
INCLUDES(Secondary_Competitors__c,&quot;vCOPS&quot;),
INCLUDES(Secondary_Competitors__c,&quot;VMware (vCOPS only)&quot;),
INCLUDES(Secondary_Competitors__c,&quot;VMware vCOPS (Paid)&quot;),
INCLUDES(Secondary_Competitors__c,&quot;VMware vCOPS (Free)&quot;),
INCLUDES(Secondary_Competitors__c,&quot;VMware (ELA renewal)&quot;),
INCLUDES(Secondary_Competitors__c,&quot;VMware (vCloud Suite)&quot;)),
&quot;VMware&quot;,NULL),NULL)))</formula>
        <label>Against VMware (for Comp Win)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_on_Contract_Close_Last_Updated__c</fullName>
        <label>Agreement on Contract &amp; Close Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_on_Contract_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We have a clear commitment on a deadline by which we&apos;ll close the deal.</inlineHelpText>
        <label>Agreement on Contract Terms &amp; Close Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alliance_Incremental__c</fullName>
        <label>Alliance Incremental</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_Notes__c</fullName>
        <description>Field for the Alliance team to input notes/comments that will be visible for everyone. Will allow the alliances team to keep Sales up to date on Cisco and other alliances deals</description>
        <label>Alliance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Counterpart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alliance Partner Counterpart</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Alliance Partner Counterpart)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_PL__c</fullName>
        <label>Alliance Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>BMC</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>DXC</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_Partner__c</fullName>
        <label>Alliance Partner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Alliance_Incremental__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Atos</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Dimension Data</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Unisys</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Wipro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_Referral__c</fullName>
        <label>Alliance Partner Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arista Networks Accelerated</fullName>
                </value>
                <value>
                    <fullName>Arista Networks Referral</fullName>
                </value>
                <value>
                    <fullName>Cisco Accelerated</fullName>
                </value>
                <value>
                    <fullName>Cisco Referred</fullName>
                </value>
                <value>
                    <fullName>Dell Accelerated</fullName>
                </value>
                <value>
                    <fullName>Dell Referred</fullName>
                </value>
                <value>
                    <fullName>EMC Accelerated</fullName>
                </value>
                <value>
                    <fullName>EMC Referred</fullName>
                </value>
                <value>
                    <fullName>HP Accelerated</fullName>
                </value>
                <value>
                    <fullName>HP Referred</fullName>
                </value>
                <value>
                    <fullName>IBM Accelerated</fullName>
                </value>
                <value>
                    <fullName>IBM Referred</fullName>
                </value>
                <value>
                    <fullName>Microsoft Accelerated</fullName>
                </value>
                <value>
                    <fullName>Microsoft Referred</fullName>
                </value>
                <value>
                    <fullName>NetApp Accelerated</fullName>
                </value>
                <value>
                    <fullName>NetApp Referred</fullName>
                </value>
                <value>
                    <fullName>Nutanix Accelerated</fullName>
                </value>
                <value>
                    <fullName>Nutanix Referred</fullName>
                </value>
                <value>
                    <fullName>PURE Storage Accelerated</fullName>
                </value>
                <value>
                    <fullName>PURE Storage Referral</fullName>
                </value>
                <value>
                    <fullName>Red Hat Accelerated</fullName>
                </value>
                <value>
                    <fullName>Red Hat Referred</fullName>
                </value>
                <value>
                    <fullName>Tintri Accelerated</fullName>
                </value>
                <value>
                    <fullName>Tintri Referred</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Capped__c</fullName>
        <formula>IF( Amount &gt; 1000000,1000000,Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Capped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_OLD__c</fullName>
        <description>To store all old Opportunity amounts before automated trigger is put in place.</description>
        <label>Amount (OLD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_formula__c</fullName>
        <description>For opportunity history reports (custom fields pull current values, unlike standard fields which are historical)</description>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_if_Best_Case__c</fullName>
        <description>For use in Pipeline snapshot report</description>
        <formula>IF(ISPICKVAL(Forecast_Opportunity_2__c, &quot;Best Case&quot;),Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount if Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_if_Closed_Won__c</fullName>
        <formula>IF(
OR(TEXT(StageName)=&quot;Closed Won&quot;,TEXT(StageName)=&quot;PO Received&quot;),
Amount,NULL)</formula>
        <label>Amount if Closed Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_if_Forecast__c</fullName>
        <description>For use in Pipeline Snapshot report</description>
        <formula>IF(ISPICKVAL(Forecast_Opportunity_2__c, &quot;Forecast&quot;),Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount if Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_if_Pipe_Reached__c</fullName>
        <formula>IF( OR (
Highest_Stage_Reached__c = &quot;Pipeline&quot;,
Highest_Stage_Reached__c = &quot;Upside&quot;,
Highest_Stage_Reached__c = &quot;Strong Upside&quot;,
Highest_Stage_Reached__c = &quot;Commit&quot;,
Highest_Stage_Reached__c = &quot;PO Received&quot;,
Highest_Stage_Reached__c = &quot;Closed Won&quot;
),
 Amount ,0)</formula>
        <label>Amount if Pipe Reached</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_if_Upside__c</fullName>
        <formula>IF(
OR(
Highest_Stage_Reached__c = &quot;Upside&quot;,
Highest_Stage_Reached__c = &quot;Strong Upside&quot;,
Highest_Stage_Reached__c =&quot;Commit&quot;),
Amount,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount if Upside+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_per_Ramped_Month_Identified_By__c</fullName>
        <formula>IF(Identified_By__r.Tenure_days__c&lt;150,NULL,Amount/((Identified_By__r.Tenure_days__c-120)/30))</formula>
        <label>Amount per Ramped Month (Identified By)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_per_Tenure_Month_Identified_By__c</fullName>
        <formula>Amount/(Identified_By__r.Tenure_days__c/30)</formula>
        <label>Amount per Tenure Month (Identified By)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anchor_Realization_EJF__c</fullName>
        <description>For Eric Fischer</description>
        <formula>IF(Run_Rate_EJF__c=FALSE,IF(TEXT(StageName)=&quot;Pipeline&quot;,0,Amount-Forecasted_Bookings_Editable__c),0)</formula>
        <label>Anchor Realization (EJF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_issues_or_escalation__c</fullName>
        <description>Any issues, help needed, or escalations</description>
        <inlineHelpText>Any issues, help needed, or escalations</inlineHelpText>
        <label>Any issues or escalation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pipeline_Approved</fullName>
                    <label>Pipeline Approved</label>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Upside Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Rule_Breaker__c</fullName>
        <formula>CASE($UserRole.Name,
&quot;VMT SF admin&quot;,&quot;Yes&quot;,
&quot;CFO&quot;,&quot;Yes&quot;,
&quot;No&quot;)</formula>
        <label>Approved Rule Breaker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Optimization_Lead_Submitted__c</fullName>
        <description>MSFT Assessment question</description>
        <label>Assessment/Optimization Lead Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_Risk_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Risk Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIP_Completed_Last_Updated__c</fullName>
        <label>BIP Presented Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIP_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BIP Presented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shared with WI Partner</description>
        <label>BIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ContentInvitationCount__c</fullName>
        <label>Content Invitation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ContentLastSentDate__c</fullName>
        <label>Content Last Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ContentViewCount__c</fullName>
        <label>Content View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ContentViewRate__c</fullName>
        <formula>IF(BRNSHRK__ContentInvitationCount__c &gt; 0, MIN(BRNSHRK__ContentViewCount__c / BRNSHRK__ContentInvitationCount__c, 1), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__DaysSinceLastContentSent__c</fullName>
        <formula>IF(NOT(ISBLANK(DATEVALUE(BRNSHRK__ContentLastSentDate__c ))), ROUND(NOW() - BRNSHRK__ContentLastSentDate__c, 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Content Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Began_Eval_Last_Updated__c</fullName>
        <label>Began Eval Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Began_Eval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POV Eval Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <inlineHelpText>Date when the deal should show up on financial statements (for accounting purposes).  This field is for Finance use only.</inlineHelpText>
        <label>Close Date (Finance)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brain_Lookup__c</fullName>
        <formula>IF(TEXT(Type)=&quot;Maintenance Renewal&quot;,&quot;Maintenance Renewals&quot;,
IF(AND(TEXT(Type)=&quot;Subscription Renewal&quot;,CloseDate&lt;DATE(2016,1,1),OR(Account.Name=&quot;Computer Sciences Corporation&quot;,Account.Name=&quot;CSC&quot;,CONTAINS(Account.Name,&quot;CSC [&quot;))),&quot;CSC&quot;,
IF(TEXT(Owner_Team__c)=&quot;Finance&quot;,&quot;Finance&quot;,
IF(AND(Owner.Full_Name__c=&quot;Dominic DiMeco&quot;,CloseDate&lt;=DATEVALUE(&quot;2015-3-31&quot;)),&quot;Michael Killoran&quot;,
IF(TEXT(Owner_Team__c)=&quot;Federal&quot;,Owner.Full_Name__c,
IF(CONTAINS(TEXT(Owner_Team__c),&quot;Enterprise&quot;),IF(CONTAINS(Owner.UserRole.Name,&quot;Enterprise Rep&quot;),Owner.Full_Name__c,
CASE(Owner.Full_Name__c,
&quot;Peter Jadovich&quot;,&quot;Eric Winslow&quot;,
Owner.Full_Name__c)),
IF(TEXT(Owner_Team__c)=&quot;Global Accounts US&quot;,IF(CloseDate&lt;DATEVALUE(&quot;2015-7-1&quot;),&quot;Chris Reisig&quot;,Owner.Full_Name__c),
IF(TEXT(Owner_Team__c)=&quot;Global Accounts International&quot;,IF(CloseDate&lt;DATEVALUE(&quot;2015-7-1&quot;),&quot;Andrew Mallaband&quot;,Owner.Full_Name__c),
TEXT(Owner_Team__c)))))))))</formula>
        <label>Brain Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Budget_Cycle__c</fullName>
        <inlineHelpText>What is the prospect&apos;s budget and/or when does the budget cycle end?</inlineHelpText>
        <label>Budget/Budget Cycle</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Budget Holder)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <label>Budget Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed for software</fullName>
                </value>
                <value>
                    <fullName>Confirmed for initiative</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bus_Quota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bus Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Drivers_Detail__c</fullName>
        <inlineHelpText>Related to the primary value driver - what are the relevant current initiatives, projects, use cases, etc.?</inlineHelpText>
        <label>Business Initiative Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Drivers__c</fullName>
        <label>Business Drivers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assure workload performance</fullName>
                </value>
                <value>
                    <fullName>Improve operational efficiencies</fullName>
                </value>
                <value>
                    <fullName>Maximize ROI of infrastructure</fullName>
                </value>
                <value>
                    <fullName>IT agility</fullName>
                </value>
                <value>
                    <fullName>Plan, build &amp; run IAAS (Enterprise)</fullName>
                </value>
                <value>
                    <fullName>Differentiate svcs &amp; protect mrgns (SPs)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Info_from_Eval__c</fullName>
        <label>Business Info from Eval</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Project_Justification__c</fullName>
        <inlineHelpText>What is the prospect looking to accomplish with VMTurbo from a business perspective?</inlineHelpText>
        <label>Business Project Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAT_Notes__c</fullName>
        <label>CAT Notes</label>
        <length>510</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CFCR_Exclude_From_Campaign_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this record will be excluded from Full Circle Campaign Influence Calculations</description>
        <inlineHelpText>When checked this record will be excluded from Full Circle Campaign Influence Calculations</inlineHelpText>
        <label>Exclude From Campaign Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPU_Socket_Update_Date__c</fullName>
        <label>CPU Socket Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CX_CoE_Introduced_Last_Updated__c</fullName>
        <label>CX/CoE Introduced Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CX_CoE_Introduced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the Customer Experience and/or Center of Excellence been introduced to the account? This should happen before a contract proposal is put together so training / services / post-sales attention can be properly determined.</inlineHelpText>
        <label>CX / CoE Engaged</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>